@@ -80,18 +80,18 @@ rsyncable_gzwrite(rpmGZFILE rpmgz, const unsigned char *const buf, const size_t 
 	n = i + 1 - (begin - buf);
 	rc = gzwrite(rpmgz->gz, begin, n);
 	if (rc < 0)
-	    return rc;
+	    return (n_written ? n_written : rc);
 	n_written += rc;
 	begin += n;
 	rc = gzflush(rpmgz->gz, Z_SYNC_FLUSH);
 	if (rc < 0)
-	    return rc;
+	    return (n_written ? n_written : rc);
     }
     if (begin < buf + len) {
 	n = len - (begin - buf);
 	rc = gzwrite(rpmgz->gz, begin, n);
 	if (rc < 0)
-	    return rc;
+	    return (n_written ? n_written : rc);
 	n_written += rc;
     }
     return n_written;
@@ -204,8 +204,8 @@ DBGIO(fd, (stderr, "==>\tgzdRead(%p,%p,%u) rc %lx %s\n", cookie, buf, (unsigned)
 	    fd->syserrno = errno;
 	    fd->errcookie = strerror(fd->syserrno);
 	}
-    } else if (rc >= 0) {
-	fdstat_exit(fd, FDSTAT_READ, rc);
+    } else {
+	fdstat_exit(fd, FDSTAT_READ, (rc > 0 ? rc : 0));
 	if (fd->ndigests && rc > 0) fdUpdateDigests(fd, (void *)buf, rc);
     }
     return rc;
@@ -232,16 +232,15 @@ static ssize_t gzdWrite(void * cookie, const char * buf, size_t count)
     else
 	rc = gzwrite(rpmgz->gz, (void *)buf, (unsigned)count);
 DBGIO(fd, (stderr, "==>\tgzdWrite(%p,%p,%u) rc %lx %s\n", cookie, buf, (unsigned)count, (unsigned long)rc, fdbg(fd)));
-    if (rc < 0) {
+    if (rc < count) {
 	int zerror = 0;
 	fd->errcookie = gzerror(rpmgz->gz, &zerror);
 	if (zerror == Z_ERRNO) {
 	    fd->syserrno = errno;
 	    fd->errcookie = strerror(fd->syserrno);
 	}
-    } else if (rc > 0) {
-	fdstat_exit(fd, FDSTAT_WRITE, rc);
     }
+    fdstat_exit(fd, FDSTAT_WRITE, (rc > 0 ? rc : 0));
     return rc;
 }
 
@@ -277,9 +276,8 @@ DBGIO(fd, (stderr, "==>\tgzdSeek(%p,%ld,%d) rc %lx %s\n", cookie, (long)p, whenc
 	    fd->syserrno = errno;
 	    fd->errcookie = strerror(fd->syserrno);
 	}
-    } else if (rc >= 0) {
-	fdstat_exit(fd, FDSTAT_SEEK, rc);
     }
+    fdstat_exit(fd, FDSTAT_SEEK, (rc > 0 ? rc : 0));
 #else
     rc = -2;
 #endif
