@@ -1,5 +1,6 @@
 
 5.1.0 -> 5.2a0:
+    - at: gzdio: return partial "best effort" bytes written with gzfoo errors.
     - at: gzdio: do gzflush only after RSYNC_WIN boundaries.
     - at: gzdio: push gzFile into a private container.
     - jbj: rpmio: mark "server awol" disconnected state for graceful error
